<?xml version="1.0"?>
<package format="2">
  <name>ecn_navigation</name>
  <version>0.0.0</version>
  <description>Basic navigation demo with Cartographer / AMCL</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
